Bug 1435407 - declare our wrapped delete definitions with noexcept(true); r=glandium

This behavior matches what gets used in mozalloc.h to define these
wrappers, and is particularly necessary for newer versions of clang to
not complain about our definitions.